force-app/main/default/objects/Graduate_Master_Tracker__c/Graduate_Master_Tracker__c.object-meta.xml
<CustomObject>
    <description>Objected used by WPC GPO to calculate a class profile for potential incoming graduate students.</description>
    <label>Graduate Master Tracker</label>
    <nameField>
        <displayFormat>GMT-{000000}</displayFormat>
        <label>Graduate Master Tracker</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Graduate Master Tracker</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>