force-app/main/default/objects/Graduate_Master_Tracker__c/fields/Admission_Test_Type__c.field-meta.xml
<CustomField>
    <fullName>Admission_Test_Type__c</fullName>
    <label>Admission Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GRE</fullName>
            </value>
            <value>
                <fullName>GMAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>