force-app/main/default/objects/Graduate_Master_Tracker__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looks up to the Contact on the Opportunity related to this record.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Graduate Master Tracker</relationshipLabel>
    <relationshipName>Graduate_Master_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>