force-app/main/default/objects/Graduate_Master_Tracker__c/fields/Display_Score__c.field-meta.xml
<CustomField>
    <fullName>Display_Score__c</fullName>
    <label>Display Score</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>