force-app/main/default/objects/Graduate_Master_Tracker__c/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <formula>Contact__r.EMPLID__c</formula>
    <label>EMPLID</label>
    <type>Text</type>
</CustomField>