force-app/main/default/objects/Graduate_Master_Tracker__c/fields/GMAT_Focus_Quantitative_Percentile__c.field-meta.xml
<CustomField>
    <fullName>GMAT_Focus_Quantitative_Percentile__c</fullName>
    <description>[Apex] - If the applicant took the GMAT prior to July 1, 2024, the score will be stored here. If they took it after July 1, 2024, then the score will be in the display score, verbal and quantitative score fields. Apex code copies the test details and puts them here.</description>
    <inlineHelpText>[Apex] - If the applicant took the GMAT prior to July 1, 2024, the score will be stored here. If they took it after July 1, 2024, then the score will be in the display score, verbal and quantitative score fields. Apex code copies the test details and puts them here.</inlineHelpText>
    <label>GMAT Focus Quantitative Percentile</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>