force-app/main/default/objects/Graduate_Master_Tracker__c/fields/Interview_1_Score__c.field-meta.xml
<CustomField>
    <fullName>Interview_1_Score__c</fullName>
    <description>[Apex] - This data is copied from the interview details related to Opportunity for this record.</description>
    <inlineHelpText>[Apex] - This data is copied from the interview details related to Opportunity for this record.</inlineHelpText>
    <label>Interview 1 Score</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>