force-app/main/default/objects/Graduate_Master_Tracker__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[Apex] - Looks up to the opportunity record that this record is for.</description>
    <inlineHelpText>[Apex] - Looks up to the opportunity record that this record is for.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Graduate Master Tracker</relationshipLabel>
    <relationshipName>Graduate_Master_Tracker</relationshipName>
    <type>Lookup</type>
</CustomField>