force-app/main/default/objects/Graduate_Master_Tracker__c/fields/Quantitative_Percentile__c.field-meta.xml
<CustomField>
    <fullName>Quantitative_Percentile__c</fullName>
    <label>Quantitative Percentile</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>