force-app/main/default/objects/Graduate_Master_Tracker__c/fields/Quantitative_Total__c.field-meta.xml
<CustomField>
    <fullName>Quantitative_Total__c</fullName>
    <label>Quantitative Total</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>