force-app/main/default/objects/Graduate_Master_Tracker__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <description>[Apex] - Looks up all the tags in the Object Tag object that are related to the Opportunity on this record.</description>
    <inlineHelpText>[Apex] - Looks up all the tags in the Object Tag object that are related to the Opportunity on this record.</inlineHelpText>
    <label>Tags</label>
    <length>999</length>
    <type>LongTextArea</type>
</CustomField>