force-app/main/default/objects/Graduate_Master_Tracker__c/fields/Verbal_Percentile__c.field-meta.xml
<CustomField>
    <fullName>Verbal_Percentile__c</fullName>
    <label>Verbal Percentile</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>